--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = git@github.com:wehard/libft.git
+[submodule "vendor/Unity"]
+	path = vendor/Unity
+	url = https://github.com/ThrowTheSwitch/Unity.git
