--- a/test/Makefile
+++ b/test/Makefile
@@ -6,13 +6,9 @@
 #    By: wkorande <willehard@gmail.com>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/01 15:48:04 by rjaakonm          #+#    #+#              #
-#    Updated: 2021/03/30 15:03:55 by wkorande         ###   ########.fr        #
+#    Updated: 2021/04/01 13:18:49 by wkorande         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-
-ifeq ($(HOSTTYPE),)
-	HOSTTYPE := $(shell uname -m)_$(shell uname -s)
-endif
 
 BOLDRED=\033[1;31m
 GREEN=\033[0;32m
@@ -31,7 +27,7 @@ NORMAL=\033[0m
 MALLOC_SRC = ../src/*.c
 UNITY_SRC = ../vendor/Unity/src/*.c
 
-LIB = -L ../ -lft_malloc_$(HOSTTYPE) -L ../libft -lft -lpthread
+LIB = -L ../ -lft_malloc -L ../libft -lft -lpthread
 
 CFLAGS = -Wall -Wextra -Werror
 
